--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "react-ga": "^2.6.0",
     "react-hot-loader": "^4.12.18",
     "react-redux": "^7.0.1",
+    "react-router": "5.0.1",
     "react-router-dom": "^5.0.1",
     "react-transition-group": "^1.2.1",
     "react-with-direction": "^1.3.1",
