--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
   "dependencies": {
     "@babel/runtime": "^7.8.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
     "accounting": "^0.4.1",
     "awesomplete": "^1.1.0",
@@ -74,7 +74,7 @@
     "d3": "^3.5.16",
     "d3-scale": "^2.2.2",
     "data-transparency-ui": "github:fedspendingtransparency/data-transparency-ui#v1.1.8",
-    "dompurify": "^2.0.8",
+    "dompurify": "^2.2.7",
     "ent": "^2.2.0",
     "file-loader": "^3.0.1",
     "git-revision-webpack-plugin": "^3.0.3",
@@ -109,7 +109,7 @@
     "react-with-direction": "^1.3.1",
     "redux": "^4.0.1",
     "superagent": "^3.7.0",
-    "superagent-use": "0.0.1",
+    "superagent-use": "^0.1.0",
     "svg4everybody": "^2.0.3",
     "tinycolor2": "^1.3.0",
     "xmldoc": "^0.4.0"
