--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.32.0",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.4.1",
+    "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
@@ -109,7 +109,7 @@
     "react-with-direction": "^1.3.1",
     "redux": "^4.0.1",
     "superagent": "^3.7.0",
-    "superagent-use": "^0.1.0",
+    "superagent-use": "0.0.1",
     "svg4everybody": "^2.0.3",
     "tinycolor2": "^1.3.0",
     "xmldoc": "^0.4.0"
