--- a/package.json
+++ b/package.json
@@ -28,26 +28,25 @@
   },
   "homepage": "https://github.com/fedspendingtransparency/data-act-broker",
   "devDependencies": {
-    "@babel/core": "^7.4.4",
+    "@babel/core": "^7.17.10",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.17.10",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^8.2.6",
-    "babel-jest": "^24.8.0",
-    "babel-loader": "^8.0.6",
+    "babel-jest": "^27.0.1",
+    "babel-loader": "^8.2.3",
     "babel-plugin-module-resolver": "^3.2.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
-    "eslint": "^6.8.0",
+    "eslint": "^7.5.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.1.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "7.5.1",
     "eslint-plugin-react-hooks": "^1.6.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.8.0",
-    "jest-cli": "^24.8.0",
+    "jest": "^26.6.3",
+    "jest-cli": "^26.4.2",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "react-test-renderer": "^16.8.6",
     "sass-loader": "^7.1.0",
@@ -58,6 +57,7 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/runtime": "^7.8.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
@@ -83,10 +83,10 @@
     "immutable": "^3.8.1",
     "jquery": "^3.5.0",
     "js-cookie": "^2.1.0",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.21",
     "markdown": "^0.5.0",
     "mini-css-extract-plugin": "^0.6.0",
-    "moment": "^2.24.0",
+    "moment": "^2.29.4",
     "node-sass": "^4.13.1",
     "node-uuid": "^1.4.7",
     "prop-types": "^15.5.7",
