--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "react-test-renderer": "^16.8.6",
     "sass-loader": "^7.1.0",
-    "uglifyjs-webpack-plugin": "^2.1.3",
+    "terser-webpack-plugin": "^4.2.3",
     "webpack": "^4.32.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.11.2",
