--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "travis": "./node_modules/.bin/eslint --config .eslintrc --ext .jsx,.js \"src/js/**\" && ./node_modules/.bin/jest --runInBand;"
   },
   "engines": {
-    "node": ">=6.11.0",
-    "npm": ">=3.10.10"
+    "node": ">=16.14.2",
+    "npm": ">=8.5.1"
   },
   "repository": {
     "type": "git",
@@ -28,91 +28,95 @@
   },
   "homepage": "https://github.com/fedspendingtransparency/data-act-broker",
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.17.10",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/core": "^7.21.4",
+    "@babel/polyfill": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
     "babel-jest": "^27.0.1",
-    "babel-loader": "^8.2.3",
-    "babel-plugin-module-resolver": "^3.2.0",
+    "babel-loader": "^9.1.0",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2",
+    "enzyme-adapter-react-16": "^1.15.7",
     "eslint": "^7.5.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.1.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "7.5.1",
-    "eslint-plugin-react-hooks": "^1.6.0",
+    "eslint-config-airbnb": "^19.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-cli": "^26.4.2",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "react-test-renderer": "^16.8.6",
-    "sass-loader": "^7.1.0",
+    "react-test-renderer": "^16.14.0",
+    "sass-loader": "^12.4.0",
     "terser-webpack-plugin": "^4.2.3",
-    "webpack": "^4.32.0",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^4.2.1"
+    "webpack": "^5.76.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "@babel/eslint-parser": "^7.17.0",
-    "@babel/runtime": "^7.8.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-regular-svg-icons": "^5.11.2",
+    "@babel/eslint-parser": "^7.21.3",
+    "@babel/runtime": "^7.21.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.7",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.19",
     "accounting": "^0.4.1",
-    "awesomplete": "^1.1.0",
-    "babel-polyfill": "^6.26.0",
-    "bootstrap-sass": "^3.3.6",
-    "classnames": "^2.2.6",
+    "awesomplete": "^1.1.5",
+    "bootstrap-sass": "^3.4.3",
+    "buffer": "^6.0.3",
+    "classnames": "^2.3.2",
     "clean-webpack-plugin": "^2.0.2",
-    "core-js": "^3.0.1",
-    "css-loader": "^2.1.1",
+    "core-js": "^3.30.0",
+    "css-loader": "^6.5.1",
     "d3": "^3.5.16",
     "d3-scale": "^2.2.2",
     "data-transparency-ui": "github:fedspendingtransparency/data-transparency-ui#v1.1.8",
-    "dompurify": "^2.2.7",
+    "dompurify": "^2.4.5",
     "ent": "^2.2.0",
-    "file-loader": "^3.0.1",
-    "git-revision-webpack-plugin": "^3.0.3",
-    "history": "^4.9.0",
-    "html-webpack-plugin": "^3.2.0",
+    "file-loader": "^6.2.0",
+    "git-revision-webpack-plugin": "^3.0.6",
+    "history": "^4.10.1",
+    "html-webpack-plugin": "^5.5.0",
     "immutable": "^3.8.1",
-    "jquery": "^3.5.0",
-    "js-cookie": "^2.1.0",
+    "jquery": "^3.6.4",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
-    "markdown": "^0.5.0",
-    "mini-css-extract-plugin": "^0.6.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "moment": "^2.29.4",
-    "node-sass": "^4.13.1",
-    "node-uuid": "^1.4.7",
-    "prop-types": "^15.5.7",
+    "prop-types": "^15.8.1",
     "q": "^1.4.1",
     "query-string": "^5.1.1",
-    "react": "^16.12.0",
+    "react": "^16.14.0",
     "react-aria-modal": "^2.7.0",
-    "react-beautiful-dnd": "^13.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dates": "^21.8.0",
-    "react-day-picker": "^7.2.4",
+    "react-day-picker": "^7.4.10",
     "react-dimensions": "^1.0.2",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.14.0",
     "react-dropzone": "^3.3.0",
-    "react-ga": "^2.6.0",
-    "react-hot-loader": "^4.12.18",
-    "react-redux": "^7.0.1",
+    "react-ga": "^2.7.0",
+    "react-hot-loader": "^4.13.1",
+    "react-markdown": "^5.0.3",
+    "react-redux": "^7.2.9",
     "react-router": "5.0.1",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.3.4",
     "react-transition-group": "^1.2.1",
-    "react-with-direction": "^1.3.1",
-    "redux": "^4.0.1",
+    "react-with-direction": "^1.4.0",
+    "redux": "^4.2.1",
+    "remark-rehype": "^10.1.0",
+    "rehype-attr": "^2.1.4",
+    "sass": "^1.53.0",
+    "stream": "^0.0.2",
     "superagent": "^3.7.0",
     "superagent-use": "0.0.1",
     "svg4everybody": "^2.0.3",
-    "tinycolor2": "^1.3.0",
+    "tinycolor2": "^1.6.0",
+    "uuid": "^8.3.2",
     "xmldoc": "^0.4.0"
   }
 }
