--- a/package.json
+++ b/package.json
@@ -27,11 +27,27 @@
     "url": "https://github.com/fedspendingtransparency/data-act-broker/issues"
   },
   "homepage": "https://github.com/fedspendingtransparency/data-act-broker",
+  "resolutions": {
+    "trim-newlines": "4.0.2",
+    "glob-parent": "6.0.2",
+    "**/glob-parent": "6.0.2",
+    "decode-uri-component": "0.2.2",
+    "trim": "1.0.1",
+    "**/trim": "1.0.1",
+    "validator": "13.7.0",
+    "**/validator": "13.7.0",
+    "got": "11.8.5",
+    "**/got": "11.8.5",
+    "json5": "2.2.3",
+    "http-cache-semantic": "4.1.1",
+    "sequelize": "6.29.0",
+    "eslint": "7.32.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.21.4",
-    "@babel/polyfill": "^7.10.4",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-transform-runtime": "^7.21.4",
+    "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "babel-jest": "^27.0.1",
@@ -40,8 +56,8 @@
     "css-minimizer-webpack-plugin": "^3.4.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.15.7",
-    "eslint": "^7.5.0",
-    "eslint-config-airbnb": "^19.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "7.28.0",
@@ -75,7 +91,7 @@
     "css-loader": "^6.5.1",
     "d3": "^3.5.16",
     "d3-scale": "^2.2.2",
-    "data-transparency-ui": "github:fedspendingtransparency/data-transparency-ui#v1.1.8",
+    "data-transparency-ui": "github:fedspendingtransparency/data-transparency-ui#v5.4.0",
     "dompurify": "^2.4.5",
     "ent": "^2.2.0",
     "file-loader": "^6.2.0",
@@ -88,6 +104,7 @@
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.6.1",
     "moment": "^2.29.4",
+    "node-gyp": "^9.3.1",
     "prop-types": "^15.8.1",
     "q": "^1.4.1",
     "query-string": "^5.1.1",
@@ -108,8 +125,8 @@
     "react-transition-group": "^1.2.1",
     "react-with-direction": "^1.4.0",
     "redux": "^4.2.1",
-    "remark-rehype": "^10.1.0",
     "rehype-attr": "^2.1.4",
+    "remark-rehype": "^10.1.0",
     "sass": "^1.53.0",
     "stream": "^0.0.2",
     "superagent": "^3.7.0",
