--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "babel-jest": "^27.0.1",
     "babel-loader": "^9.1.0",
     "babel-plugin-module-resolver": "^5.0.0",
+    "copy-webpack-plugin": "^10.2.4",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.15.7",
@@ -68,7 +69,6 @@
     "react-test-renderer": "^16.14.0",
     "sass-loader": "^12.4.0",
     "terser-webpack-plugin": "^4.2.3",
-    "webpack": "^5.76.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^4.2.2"
@@ -128,12 +128,14 @@
     "rehype-attr": "^2.1.4",
     "remark-rehype": "^10.1.0",
     "sass": "^1.53.0",
+    "source-map-loader": "^4.0.1",
     "stream": "^0.0.2",
     "superagent": "^3.7.0",
     "superagent-use": "0.0.1",
     "svg4everybody": "^2.0.3",
     "tinycolor2": "^1.6.0",
     "uuid": "^8.3.2",
+    "webpack": "^5.76.0",
     "xmldoc": "^0.4.0"
   }
 }
