--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ env:
 cache:
   directories:
     - node_modules
+before_install:
+  - npm install eslint@8.32.0
 script:
   - npm run dev
   - npm run travis
