--- a/package.json
+++ b/package.json
@@ -50,12 +50,12 @@
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
     "babel-jest": "^27.0.1",
     "babel-loader": "^9.1.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.15.7",
     "eslint": "^8.32.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.27.5",
