--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "data-act-broker",
   "version": "0.0.0",
-  "description": "DATA Act Broker",
+  "description": "DATA Broker",
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/jest; exit 0;",
