--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
-    "babel-jest": "^27.0.1",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "css-minimizer-webpack-plugin": "^3.4.1",
@@ -63,8 +63,8 @@
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "^4.0.8",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
-    "jest-cli": "^26.4.2",
+    "jest": "^29.7.0",
+    "jest-cli": "^29.7.0",
     "react-test-renderer": "^16.14.0",
     "sass-loader": "^12.4.0",
     "terser-webpack-plugin": "^4.2.3",
@@ -99,6 +99,7 @@
     "history": "^4.10.1",
     "html-webpack-plugin": "^5.5.0",
     "immutable": "^3.8.1",
+    "jest-environment-jsdom": "^29.7.0",
     "jquery": "^3.6.4",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
