--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,13 @@ node_js:
   - "20.18.2"
 # Need a C++ compiler
 addons:
-  chrome: stable
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
+env:
+  - CXX=g++-4.8
 cache:
   directories:
     - node_modules
