--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test-windows": "jest"
   },
   "engines": {
-    "node": ">=20.18.2",
+    "node": ">=20.18.1",
     "npm": ">=10.8.3"
   },
   "repository": {
@@ -52,12 +52,15 @@
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.5.1",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "css-minimizer-webpack-plugin": "^7.0.0",
-    "enzyme": "^3.9.0",
     "eslint": "^8.32.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.27.5",
@@ -66,7 +69,11 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-canvas-mock": "^2.5.2",
     "jest-cli": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-serializer": "^28.0.0",
+    "jest-util": "^29.7.0",
     "react-test-renderer": "^16.14.0",
     "sass-loader": "^12.4.0",
     "terser-webpack-plugin": "^5.3.0",
@@ -82,6 +89,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.19",
+    "@jest/globals": "^29.7.0",
     "accounting": "^0.4.1",
     "awesomplete": "^1.1.7",
     "bootstrap-sass": "^3.4.3",
@@ -101,7 +109,6 @@
     "history": "^4.10.1",
     "html-webpack-plugin": "^5.5.0",
     "immutable": "^3.8.1",
-    "jest-environment-jsdom": "^29.7.0",
     "jquery": "^3.6.4",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
