--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "d3": "^3.5.16",
     "d3-scale": "^4.0.2",
     "data-transparency-ui": "github:fedspendingtransparency/data-transparency-ui#v6.3.5",
+    "date-fns": "^2.16.1",
     "dompurify": "^2.4.5",
     "ent": "^2.2.0",
     "file-loader": "^6.2.0",
@@ -121,7 +122,6 @@
     "react": "^18.3.1",
     "react-aria-modal": "^4.0.1",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dates": "^21.8.0",
     "react-day-picker": "^9.4.3",
     "react-dimensions": "^1.3.1",
     "react-dom": "^18.3.1",
