--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/jest; exit 0;",
-    "lint": "./node_modules/.bin/eslint --config .eslintrc --ext .jsx,.js \"src/js/**\"; exit 0;",
-    "errors": "./node_modules/.bin/eslint --config .eslintrc --ext .jsx,.js \"src/js/**\" --quiet; exit 0;",
+    "lint": "./node_modules/.bin/eslint --config eslint.config.js --ext .jsx,.js \"src/js/**\"; exit 0;",
+    "errors": "./node_modules/.bin/eslint --config eslint.config.js --ext .jsx,.js \"src/js/**\" --quiet; exit 0;",
     "start": "webpack-dev-server --progress --open --port 3002 --config ./webpack/webpack.dev.config.js",
     "dev": "webpack --progress --config ./webpack/webpack.dev.config.js",
     "prod": "webpack --progress --config ./webpack/webpack.prod.config.js",
     "sass": "webpack --progress --config ./webpack/webpack.sass.config.js",
-    "travis": "./node_modules/.bin/eslint --config .eslintrc --ext .jsx,.js \"src/js/**\" && ./node_modules/.bin/jest --runInBand;",
-    "lint-windows": "eslint --config .eslintrc --ext .jsx,.js \"src/js/**\"",
+    "travis": "./node_modules/.bin/eslint --config eslint.config.js --ext .jsx,.js \"src/js/**\" && ./node_modules/.bin/jest --runInBand;",
+    "lint-windows": "eslint --config eslint.config.js --ext .jsx,.js \"src/js/**\"",
     "test-windows": "jest",
     "storybook": "storybook dev -p 6006 --ci",
     "build-storybook": "storybook build",
@@ -73,12 +73,12 @@
     "babel-loader": "^9.1.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "css-minimizer-webpack-plugin": "^7.0.0",
-    "eslint": "^8.32.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "7.28.0",
-    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint": "^9.24.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-storybook": "^0.12.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
@@ -96,7 +96,7 @@
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
-    "@babel/eslint-parser": "^7.21.3",
+    "@babel/eslint-parser": "^7.27.0",
     "@babel/runtime": "^7.21.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
