--- a/package.json
+++ b/package.json
@@ -98,6 +98,9 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.27.0",
     "@babel/runtime": "^7.21.0",
+    "@dnd-kit/core": "6.3.1",
+    "@dnd-kit/sortable": "10.0.0",
+    "@dnd-kit/utilities": "3.2.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
@@ -135,7 +138,6 @@
     "query-string": "^5.1.1",
     "react": "^18.3.1",
     "react-aria-modal": "^4.0.1",
-    "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^9.4.3",
     "react-dimensions": "^1.3.1",
     "react-dom": "^18.3.1",
