--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/jest; exit 0;",
-    "lint": "./node_modules/.bin/eslint --config eslint.config.js --ext .jsx,.js \"src/js/**\"; exit 0;",
-    "errors": "./node_modules/.bin/eslint --config eslint.config.js --ext .jsx,.js \"src/js/**\" --quiet; exit 0;",
+    "lint": "./node_modules/.bin/eslint --config eslint.config.js; exit 0;",
+    "errors": "./node_modules/.bin/eslint --config eslint.config.js --quiet; exit 0;",
     "start": "webpack-dev-server --progress --open --port 3002 --config ./webpack/webpack.dev.config.js",
     "dev": "webpack --progress --config ./webpack/webpack.dev.config.js",
     "prod": "webpack --progress --config ./webpack/webpack.prod.config.js",
     "sass": "webpack --progress --config ./webpack/webpack.sass.config.js",
-    "travis": "./node_modules/.bin/eslint --config eslint.config.js --ext .jsx,.js \"src/js/**\" && ./node_modules/.bin/jest --runInBand;",
-    "lint-windows": "eslint --config eslint.config.js --ext .jsx,.js \"src/js/**\"",
+    "travis": "./node_modules/.bin/eslint --config eslint.config.js && ./node_modules/.bin/jest --runInBand;",
+    "lint-windows": "eslint --config eslint.config.js",
     "test-windows": "jest",
     "storybook": "storybook dev -p 6006 --ci",
     "build-storybook": "storybook build",
