--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "@jest/globals": "^29.7.0",
     "accounting": "^0.4.1",
     "awesomplete": "^1.1.7",
+    "axios": "^1.8.4",
     "bootstrap-sass": "^3.4.3",
     "buffer": "^6.0.3",
     "classnames": "^2.3.2",
