--- a/package.json
+++ b/package.json
@@ -145,8 +145,8 @@
     "react-hot-loader": "^4.13.1",
     "react-markdown": "^5.0.3",
     "react-redux": "^7.2.9",
-    "react-router": "5.0.1",
-    "react-router-dom": "^5.3.4",
+    "react-router": "^6.30.1",
+    "react-router-dom": "^6.30.1",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "rehype-attr": "^2.1.4",
