--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.19",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@jest/globals": "^29.7.0",
     "accounting": "^0.4.1",
     "awesomplete": "^1.1.7",
@@ -119,7 +119,7 @@
     "css-loader": "^6.5.1",
     "d3": "^3.5.16",
     "d3-scale": "^4.0.2",
-    "data-transparency-ui": "github:fedspendingtransparency/data-transparency-ui#v6.3.5",
+    "data-transparency-ui": "git+https://github.com/fedspendingtransparency/data-transparency-ui#v7.0.6",
     "date-fns": "^2.16.1",
     "ent": "^2.2.0",
     "file-loader": "^6.2.0",
@@ -127,19 +127,22 @@
     "history": "^4.10.1",
     "html-webpack-plugin": "^5.5.0",
     "immutable": "^3.8.1",
+    "install": "^0.13.0",
     "jquery": "^3.6.4",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
+    "loglevel": "^1.9.2",
     "mini-css-extract-plugin": "^2.6.1",
     "moment": "^2.29.4",
     "node-gyp": "^11.0.0",
+    "npm": "^11.4.2",
     "prop-types": "^15.8.1",
     "query-string": "^5.1.1",
-    "react": "^18.3.1",
+    "react": "^19.1.0",
     "react-aria-modal": "^5.0.2",
     "react-day-picker": "^9.7.0",
     "react-dimensions": "^1.3.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-hot-loader": "^4.13.1",
     "react-markdown": "^10.1.0",
