--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.21.4",
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.21.4",
@@ -87,6 +89,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-serializer": "^28.0.0",
     "jest-util": "^29.7.0",
+    "querystring-es3": "^0.2.1",
     "react-test-renderer": "^16.14.0",
     "sass-loader": "^12.4.0",
     "storybook": "^8.6.10",
