--- a/.github/workflows/test-unit.yaml
+++ b/.github/workflows/test-unit.yaml
@@ -19,8 +19,8 @@ jobs:
         with:
           node-version: "20.18.2"
 
-      # - name: Init NPM
-      #   run: npm install -g npm@10.8.3
+      - name: Init NPM
+        run: npm install -g npm@10.8.3
 
       # - name: Install webpack
       #   run: npm install -g webpack@5.94.0
