--- a/package.json
+++ b/package.json
@@ -33,19 +33,12 @@
   },
   "homepage": "https://github.com/fedspendingtransparency/data-act-broker",
   "resolutions": {
-    "trim-newlines": "4.0.2",
     "glob-parent": "6.0.2",
     "**/glob-parent": "6.0.2",
     "decode-uri-component": "0.2.2",
     "trim": "1.0.1",
     "**/trim": "1.0.1",
-    "validator": "13.7.0",
-    "**/validator": "13.7.0",
-    "got": "11.8.5",
-    "**/got": "11.8.5",
-    "json5": "2.2.3",
-    "http-cache-semantic": "4.1.1",
-    "sequelize": "6.29.0"
+    "json5": "2.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
